packages/typ/tests/fixtures/diagnostics/0413_modules_outer_hidden_annotation_mismatch_01.ml.expected
File "0413_modules_outer_hidden_annotation_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0413_modules_outer_hidden_annotation_mismatch_01 is not a valid module name.

File "0413_modules_outer_hidden_annotation_mismatch_01.ml", line 15, characters 14-34:
15 | let _ : int = Outer_alpha.Hidden.x
                   ^^^^^^^^^^^^^^^^^^^^
Error: The value Outer_alpha.Hidden.x has type Outer_alpha.Hidden.t
       but an expression was expected of type int
