packages/typ/tests/fixtures/diagnostics/0413_modules_outer_hidden_annotation_mismatch_01.ml
module Outer_alpha = struct
  module type S = sig
    type t
    val x : t
  end

  module Impl = struct
    type t = int
    let x = 0
  end

  module Hidden : S = Impl
end

let _ : int = Outer_alpha.Hidden.x
